# support

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile
debian/: changelog  control  rules
src/: lib.rs  logs.rs  main.rs
src/repair/: apt.rs  mod.rs  nvidia.rs
