[package]
name = "system76-support"
version = "0.1.0"
authors = ["Michael Aaron Murphy <mmstick@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
as-result = "0.2"
cascade = "0.1"
futures = "0.3"
anyhow = "1"
libc = "0.2"
tempfile = "3"
async-std = "1"
clap = "2"
log = "0.4"
fern = "0.5"
pidfd = "0.2"
better-panic = "0.2"
